<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/tvCustom"
            android:text="@string/jan"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/feb"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/mar"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/apr"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:background="@drawable/tv_view_background"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/may"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/jun"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/jul"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/agt"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/sep"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/oct"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/nov"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
        <TextView
            style="@style/tvCustom"
            android:text="@string/dec"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="30dp"
            />
    </LinearLayout>

</HorizontalScrollView>