<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HistoryActivity">

    <TextView
        android:id="@+id/textView14"
        style="@style/tvCustom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/riwayat"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvbulan"
        tools:listitem="@layout/list_history_layout" />

    <TextView
        android:id="@+id/tvbulan"
        style="@style/tvCustom"
        android:layout_marginTop="32dp"
        android:text="@string/aug"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@id/textView14" />

    <TextView
        android:id="@+id/bulan2"
        style="@style/tvCustom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_sep"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_history" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_historysep"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/bulan2"
        tools:listitem="@layout/list_history_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>